Decrease stats size to avoid text overflow

--- a/cms/sass/components/_stat.scss
+++ b/cms/sass/components/_stat.scss
@@ -17,7 +17,7 @@
   display: block;
   font-weight: 600;
   @include font-serif;
-  @include typescale-02;
+  @include typescale-03;
 }
 
 .stat__description {
